--- a/commercial/app/views/hosted/hostedOnwardJourney.scala.html
+++ b/commercial/app/views/hosted/hostedOnwardJourney.scala.html
@@ -8,7 +8,7 @@
 @if(trails.isEmpty) {
     <div></div>
 } else {
-    <div class="hosted__next-page hosted-article__next-page ab-test-control">
+    <div class="hosted__next-page hosted-article__next-page">
         <div class="hosted__next-page--header">
             <div class="hosted__next-page-header--border hosted-tone-bg"></div>
             <h2 class="hosted__text hosted__next-page--more-from">More from</h2>
@@ -16,13 +16,13 @@
         </div>
         <div class="hosted__ab-test-control">
             @for(trail <- trails.slice(0, defaultRows)) {
-                <a href="@{trail.url}" class="hosted__next-page--tile" data-link-name="Next Hosted Page: @{trail.title}">
+                <a href="@{trail.url}" class="hosted__next-page--tile js-hosted-onward-journey-link" data-link-name="Next Hosted Page: @{trail.title}">
                     <img class="hosted__next-page-thumb" src="@{trail.imageUrl}" alt="Next Page: @{trail.title}">
                     <p class="hosted__next-page-title">@{trail.title}</p>
                 </a>
             }
         </div>
-        <div class="hosted__ab-test-variant1">
+        <div class="hosted__ab-test-variant-carousel">
             @if(trails.length > maxRows){
                 <div class="hosted__next-page__carousel-arrows">
                     @fragments.inlineSvg("arrow-right", "icon", List("arrow-left", "prev-oj-item"))
@@ -33,7 +33,7 @@
                 @for(i <- trails.indices if i % maxRows == 0) {
                     <div class="carousel-page" style="left: @{i*100/maxRows}%;">
                         @for(trail <- trails.slice(i, i + maxRows)) {
-                            <a href="@{trail.url}" class="hosted__next-page--tile" data-link-name="Next Hosted Page: @{trail.title}">
+                            <a href="@{trail.url}" class="hosted__next-page--tile js-hosted-onward-journey-link" data-link-name="Next Hosted Page: @{trail.title}">
                                 <img class="hosted__next-page-thumb" src="@{trail.imageUrl}" alt="Next Page: @{trail.title}">
                                 <p class="hosted__next-page-title">@{trail.title}</p>
                             </a>
@@ -49,9 +49,9 @@
                 </div>
             }
         </div>
-        <div class="hosted__ab-test-variant2">
+        <div class="hosted__ab-test-variant-popup">
             @for(trail <- trails.slice(0, defaultRows)) {
-                <a href="@{trail.url}" class="hosted__next-page--tile" data-link-name="Next Hosted Page: @{trail.title}">
+                <a href="@{trail.url}" class="hosted__next-page--tile js-hosted-onward-journey-link" data-link-name="Next Hosted Page: @{trail.title}">
                     <img class="hosted__next-page-thumb" src="@{trail.imageUrl}" alt="Next Page: @{trail.title}">
                     <p class="hosted__next-page-title">@{trail.title}</p>
                 </a>
@@ -62,7 +62,7 @@
             <div class="u-h">
                 <div class="js-hosted-more-from-popup-content">
                     @for(trail <- trails) {
-                        <a href="@{trail.url}" class="hosted__next-page-tile--popup" data-link-name="Next Hosted Page: @{trail.title}">
+                        <a href="@{trail.url}" class="hosted__next-page-tile--popup js-hosted-onward-journey-link" data-link-name="Next Hosted Page: @{trail.title}">
                             <div class="hosted-next-page-bg hosted-tone-bg"></div>
                             @fragments.image(
                                 ImageMedia.make(Seq(ImageAsset.make(Asset(AssetType.Image, Some("image/jpeg"), Some(trail.imageUrl), typeData = Some(AssetFields(width = Some(5), height = Some(3)))), 0))),
