--- a/applications/app/views/signup/newsletters.scala.html
+++ b/applications/app/views/signup/newsletters.scala.html
@@ -30,12 +30,7 @@
 }
 
 @signupConfirmation() = {
-  <div class="signup-confirmation">
-    @fragments.inlineSvg("tick", "icon")
-    <div class="signup-confirmation__message">
-        <h3 class="signup-confirmation--success">You've subscribed!</h3>
-    </div>
-  </div>
+
 }
 
 @emailListCategoryList(theme: String, emailListings: List[EmailSubscription]) = {
@@ -70,6 +65,14 @@
                 </div>
 
                 <div class="newsletter-card__meta js-newsletter-meta">
+
+                  <div class="signup-confirmation is-hidden">
+                    @fragments.inlineSvg("tick", "icon")
+                    <div class="signup-confirmation__message">
+                        <h3 class="signup-confirmation--success">You've subscribed!</h3>
+                    </div>
+                  </div>
+
                     <form action="@LinkTo("/email")" method="post" target="magicframe" class="newsletter-card__signup">
                         <input class="newsletter-card__text-input js-newsletter-card__text-input"
                           type="email"
