--- a/static/src/stylesheets/module/signup/_newsletters.scss
+++ b/static/src/stylesheets/module/signup/_newsletters.scss
@@ -92,7 +92,8 @@
     background-color: $comment-support-2;
     border-bottom: 1px solid $neutral-3;
     padding: $gs-gutter / 2;
-    padding-bottom: $gs-baseline;
+    padding-bottom: $gs-baseline * 2;
+    height: gs-height(1);
 
     * {
         -webkit-box-sizing: border-box;
@@ -188,7 +189,7 @@
 
 .signup-confirmation {
   position: relative;
-  padding: $gs-gutter / 4;
+  padding: 0 $gs-gutter / 4;
 
   .signup-confirmation__message {
     position: relative;
