fixing bug where on https, section link starts with `//`

--- a/common/app/views/fragments/meta/metaInline.scala.html
+++ b/common/app/views/fragments/meta/metaInline.scala.html
@@ -35,7 +35,7 @@
                         <div class="content__section-label @if(item.content.tags.isGallery) { content__section-label--gallery }">
                             <a class="content__section-label__link"
                                 data-link-name="article section"
-                                href="@LinkTo {/@sectionLink.href}">
+                                href="@LinkTo(sectionLink.href)">
                                     @sectionLink.title
                             </a>
                         </div>
