--- a/commercial/app/views/hosted/hostedOnwardJourney.scala.html
+++ b/commercial/app/views/hosted/hostedOnwardJourney.scala.html
@@ -1,14 +1,10 @@
 @import common.commercial.hosted.HostedPage
-@import layout.ContentWidths.GalleryMedia
-@import model.ImageMedia
-@import model.ImageAsset
-@import com.gu.contentapi.client.model.v1._
 @(trails: Seq[HostedPage], defaultRows: Int, maxRows: Int)(implicit request: RequestHeader)
 
 @if(trails.isEmpty) {
     <div></div>
 } else {
-    <div class="hosted__next-page hosted-article__next-page">
+    <div class="hosted__next-page hosted-article__next-page ab-test-control">
         <div class="hosted__next-page--header">
             <div class="hosted__next-page-header--border hosted-tone-bg"></div>
             <h2 class="hosted__text hosted__next-page--more-from">More from</h2>
@@ -16,13 +12,13 @@
         </div>
         <div class="hosted__ab-test-control">
             @for(trail <- trails.slice(0, defaultRows)) {
-                <a href="@{trail.url}" class="hosted__next-page--tile js-hosted-onward-journey-link" data-link-name="Next Hosted Page: @{trail.title}">
+                <a href="@{trail.url}" class="hosted__next-page--tile" data-link-name="Next Hosted Page: @{trail.title}">
                     <img class="hosted__next-page-thumb" src="@{trail.imageUrl}" alt="Next Page: @{trail.title}">
-                    <p class="hosted__next-page-title">@{trail.title}</p>
+                    <p class="hosted__next-page-title hosted-article__next-page-title">@{trail.title}</p>
                 </a>
             }
         </div>
-        <div class="hosted__ab-test-variant-carousel">
+        <div class="hosted__ab-test-variant1">
             @if(trails.length > maxRows){
                 <div class="hosted__next-page__carousel-arrows">
                     @fragments.inlineSvg("arrow-right", "icon", List("arrow-left", "prev-oj-item"))
@@ -33,9 +29,9 @@
                 @for(i <- trails.indices if i % maxRows == 0) {
                     <div class="carousel-page" style="left: @{i*100/maxRows}%;">
                         @for(trail <- trails.slice(i, i + maxRows)) {
-                            <a href="@{trail.url}" class="hosted__next-page--tile js-hosted-onward-journey-link" data-link-name="Next Hosted Page: @{trail.title}">
+                            <a href="@{trail.url}" class="hosted__next-page--tile" data-link-name="Next Hosted Page: @{trail.title}">
                                 <img class="hosted__next-page-thumb" src="@{trail.imageUrl}" alt="Next Page: @{trail.title}">
-                                <p class="hosted__next-page-title">@{trail.title}</p>
+                                <p class="hosted__next-page-title hosted-article__next-page-title">@{trail.title}</p>
                             </a>
                         }
                     </div>
@@ -49,11 +45,11 @@
                 </div>
             }
         </div>
-        <div class="hosted__ab-test-variant-popup">
+        <div class="hosted__ab-test-variant2">
             @for(trail <- trails.slice(0, defaultRows)) {
-                <a href="@{trail.url}" class="hosted__next-page--tile js-hosted-onward-journey-link" data-link-name="Next Hosted Page: @{trail.title}">
+                <a href="@{trail.url}" class="hosted__next-page--tile" data-link-name="Next Hosted Page: @{trail.title}">
                     <img class="hosted__next-page-thumb" src="@{trail.imageUrl}" alt="Next Page: @{trail.title}">
-                    <p class="hosted__next-page-title">@{trail.title}</p>
+                    <p class="hosted__next-page-title hosted-article__next-page-title">@{trail.title}</p>
                 </a>
             }
             @if(trails.length > defaultRows){
@@ -62,14 +58,8 @@
             <div class="u-h">
                 <div class="js-hosted-more-from-popup-content">
                     @for(trail <- trails) {
-                        <a href="@{trail.url}" class="hosted__next-page-tile--popup js-hosted-onward-journey-link" data-link-name="Next Hosted Page: @{trail.title}">
-                            <div class="hosted-next-page-bg hosted-tone-bg"></div>
-                            @fragments.image(
-                                ImageMedia.make(Seq(ImageAsset.make(Asset(AssetType.Image, Some("image/jpeg"), Some(trail.imageUrl), typeData = Some(AssetFields(width = Some(5), height = Some(3)))), 0))),
-                                Seq("hosted__next-page-thumb--popup"),
-                                GalleryMedia.inline,
-                                trail.title
-                            )
+                        <a href="@{trail.url}" class="hosted__next-page-tile--popup" data-link-name="Next Hosted Page: @{trail.title}">
+                            <img class="hosted__next-page-thumb--popup" src="@{trail.imageUrl}" alt="Next Page: @{trail.title}">
                             <p class="hosted__next-page-title--popup">@{trail.title}</p>
                         </a>
                     }
