Let the intrisic image size decide how the background fits on screen

--- a/static/src/stylesheets/module/commercial/_creatives.scss
+++ b/static/src/stylesheets/module/commercial/_creatives.scss
@@ -861,26 +861,7 @@
         position: absolute;
         top: 0;
         left: 0;
-
-        @include mq(tablet) {
-            left: calc(50% - #{(gs-span(9) + $gs-gutter * 2) / 2});
-            width: calc(100% - #{(gs-span(9) - $gs-gutter * 4) / 2});
-        }
-
-        @include mq(desktop) {
-            left: calc(50% - #{(gs-span(12) + $gs-gutter * 2) / 2});
-            width: calc(100% - #{(gs-span(12) - $gs-gutter * 4) / 2});
-        }
-
-        @include mq(leftCol) {
-            left: calc(50% - #{(gs-span(14) + $gs-gutter * 2) / 2});
-            width: calc(100% - #{gs-span(7) - $gs-gutter * 4});
-        }
-
-        @include mq(wide) {
-            left: calc(50% - #{(gs-span($gs-max-columns) + $gs-gutter * 2) / 2});
-            width: calc(100% - #{(gs-span($gs-max-columns) - $gs-gutter * 4) / 2});
-        }
+        width: 100%;
     }
 
     .creative__background {
@@ -889,25 +870,5 @@
         left: 0;
         right: 0;
         bottom: 0;
-
-        @include mq(tablet) {
-            left: calc(50% - #{(gs-span(9) + $gs-gutter * 2) / 2});
-            right: calc(50% - #{(gs-span(9) + $gs-gutter * 2) / 2});
-        }
-
-        @include mq(desktop) {
-            left: calc(50% - #{(gs-span(12) + $gs-gutter * 2) / 2});
-            right: calc(50% - #{(gs-span(12) + $gs-gutter * 2) / 2});
-        }
-
-        @include mq(leftCol) {
-            left: calc(50% - #{(gs-span(14) + $gs-gutter * 2) / 2});
-            right: calc(50% - #{(gs-span(14) + $gs-gutter * 2) / 2});
-        }
-
-        @include mq(wide) {
-            left: calc(50% - #{(gs-span($gs-max-columns) + $gs-gutter * 2) / 2});
-            right: calc(50% - #{(gs-span($gs-max-columns) + $gs-gutter * 2) / 2});
-        }
     }
 }
