Fix ads on galleries being targeted by CSS made for the gallery img tags

--- a/static/src/stylesheets/module/content/_gallery.scss
+++ b/static/src/stylesheets/module/content/_gallery.scss
@@ -170,7 +170,7 @@
     @include mq($until: desktop) {
         text-align: center;
 
-        img {
+        .gallery__img {
             display: inline-block;
         }
     }
