use Html type for fragment

--- a/common/app/views/fragments/atoms/mediaEmbed.scala.html
+++ b/common/app/views/fragments/atoms/mediaEmbed.scala.html
@@ -10,16 +10,16 @@
 <html lang="en-GB" class="gu-video-embed-html">
     <head>
         <title>@page.atom.title</title>
+        <style>
+        * { margin: 0; padding: 0; }
+        figure { margin: 0 !important; }
+        </style>
+        <link rel="stylesheet" href="@Static("stylesheets/media-player.css")"/>
         <base target="_parent"/>
     </head>
     <body>
-
-    @defining( page.atom ) { atom =>
-
-Hello World
+        @page.body
 
         @fragments.analytics.base(page)
-
-    }
     </body>
 </html>
