--- a/common/app/views/fragments/atoms/atom.scala.html
+++ b/common/app/views/fragments/atoms/atom.scala.html
@@ -6,11 +6,7 @@
 @{
     model match {
         case quiz: Quiz => views.html.fragments.atoms.quiz(quiz, maybeResults = None, showResults = false, Nil)
-        case media: MediaAtom => media match {
-            case youtube if media.assets.head.platform == "Youtube" =>
-                if(isAmp) views.html.fragments.atoms.ampYoutube(media) else views.html.fragments.atoms.youtube(media)
-            case _ => views.html.fragments.atoms.media(media)
-        }
+        case media: MediaAtom => views.html.fragments.atoms.media(media)
         case interactive: InteractiveAtom => views.html.fragments.atoms.interactive(interactive, shouldFence)
         case _ =>
     }
