about band done

--- a/common/app/views/fragments/amp/stylesheets/main.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/main.scala.html
@@ -256,6 +256,7 @@
     @fragments.amp.stylesheets.quotes()
     @fragments.amp.stylesheets.richLinks()
     @fragments.amp.stylesheets.ads()
+    @fragments.amp.stylesheets.glabs()
     @fragments.amp.stylesheets.tables()
     @fragments.amp.stylesheets.inlineSvgs()
     @fragments.amp.stylesheets.social()
