badge styling fixed

--- a/common/app/views/fragments/amp/stylesheets/glabs.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/glabs.scala.html
@@ -2,6 +2,18 @@
     background-color: #d9d9d9;
 }
 
+.paid-content--advertisement-feature .content__meta-container {
+    margin: 0;
+}
+
+.badge--alt {
+    font-size: 14px;
+}
+
+.badge__link {
+    display: block;
+}
+
 .paidfor-band {
     background: #69d1ca;
     width: 100%;
