--- a/common/app/views/fragments/amp/stylesheets/glabs.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/glabs.scala.html
@@ -2,7 +2,7 @@
     background-color: #d9d9d9;
 }
 
-.paid-content--advertisement-feature .content__meta-container {
+.paid-content--advertisement-feature .content__meta-container:not(.content__meta-container--no-byline) {
     margin: 0;
 }
 
