hosted onward journey carousel - make carousel pagination dots clickable

--- a/commercial/app/views/hosted/hostedOnwardJourney.scala.html
+++ b/commercial/app/views/hosted/hostedOnwardJourney.scala.html
@@ -48,7 +48,7 @@
             @if(trails.length > maxRows){
                 <div class="hosted__carousel-marker">
                     @for(i <- trails.indices if i % maxRows == 0) {
-                        <div class="hosted__carousel-dot hosted-tone-btn js-carousel-dot-@{i/maxRows} @{if(i == 0) "highlighted" else ""}"></div>
+                        <div class="hosted__carousel-dot hosted-tone-btn js-carousel-dot @{if(i == 0) "highlighted" else ""}"></div>
                     }
                 </div>
             }
