fixing the angles

--- a/static/src/stylesheets/inline/article-explore.scss
+++ b/static/src/stylesheets/inline/article-explore.scss
@@ -280,6 +280,7 @@ $explore-series-header-element-opacity: .85;
 
     @include mq($from: tablet) {
         top: 0;
+        overflow: visible;
     }
 
     .content__labels {
