Constrain the creative background

--- a/static/src/stylesheets/module/commercial/_creatives.scss
+++ b/static/src/stylesheets/module/commercial/_creatives.scss
@@ -849,6 +849,7 @@
 .creative__background-parent {
     transform: translate3d(0, 0, 0);
     will-change: transform;
+    contain: strict;
     position: absolute;
     top: 0;
     left: 0;
