--- a/common/app/views/fragments/atoms/atom.scala.html
+++ b/common/app/views/fragments/atoms/atom.scala.html
@@ -1,4 +1,4 @@
-@(model: _root_.model.content.Atom, shouldFence: Boolean, isAmp: Boolean)(implicit request: RequestHeader)
+@(model: _root_.model.content.Atom, shouldFence: Boolean, amp: Boolean)(implicit request: RequestHeader)
 @import _root_.model.content.Quiz
 @import _root_.model.content.MediaAtom
 @import _root_.model.content.InteractiveAtom
@@ -6,7 +6,7 @@
 @{
     model match {
         case quiz: Quiz => views.html.fragments.atoms.quiz(quiz, maybeResults = None, showResults = false, Nil)
-        case media: MediaAtom => views.html.fragments.atoms.media(media)
+        case media: MediaAtom => views.html.fragments.atoms.media(media, amp)
         case interactive: InteractiveAtom => views.html.fragments.atoms.interactive(interactive, shouldFence)
         case _ =>
     }
