Add github docs to admin app view

--- a/admin/app/views/admin.scala.html
+++ b/admin/app/views/admin.scala.html
@@ -127,5 +127,19 @@
                 </div>
             </div>
         </div>
+
+        <div class="col-md-4">
+            <h3>Documentation</h3>
+            <div class="panel panel-default well--front">
+                <div class="panel-heading">Dotcom Docs</div>
+                <div class="panel-body">
+                    <ul>
+                        <li><a href="https://github.com/guardian/frontend/tree/master/docs">Frontend Docs</a></li>
+                        <li><a href="https://github.com/guardian/frontend/blob/master/docs/02-architecture/02-fronts-architecture.md">Facia Docs</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
     </div>
 }
