--- a/common/app/views/fragments/amp/stylesheets/fonts.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/fonts.scala.html
@@ -24,7 +24,8 @@
 .guardian-egyptian-loaded .signposting__item,
 .guardian-egyptian-loaded .team__info,
 .guardian-egyptian-loaded .team__score,
-.guardian-egyptian-loaded .fc-container__header__description {
+.guardian-egyptian-loaded .fc-container__header__description,
+.guardian-egyptian-loaded .paid-content--advertisement-feature {
     font-family: "Guardian Egyptian Web", Georgia, serif;
 }
 
