--- a/common/app/views/fragments/amp/stylesheets/glabs.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/glabs.scala.html
@@ -68,13 +68,14 @@
 .paidfor-label {
     position: relative;
     cursor: pointer;
+    align-items: center;
 }
 
 .paidfor-label .tooltip-label {
     border-left: 1px solid rgba(0, 0, 0, .2);
     border-right: 1px solid rgba(0, 0, 0, .2);
     display: inline-block;
-    padding: 6px 10px;
+    padding: 7px 10px;
 }
 
 .paidfor-label .tooltip-label svg {
@@ -92,7 +93,7 @@
     padding: 16px;
     color: #ffffff;
     transform: translate(-50%, 0);
-    width: 240px;
+    width: 234px;
     border-radius: 4px;
     font-weight: 700;
     z-index: 32000;
