--- a/common/app/views/fragments/immersiveMainMedia.scala.html
+++ b/common/app/views/fragments/immersiveMainMedia.scala.html
@@ -22,7 +22,7 @@
         "content", "content--immersive", "content--immersive-article", "tonal", s"tonal--${toneClass(page.item)}")
     ">
         <div class="gs-container immersive-main-media__logo">
-            @if(page.item.elements.hasMainMedia) {
+            @if(page.item.elements.hasMainMedia || page.item.fields.main.nonEmpty) {
                 <a href="@LinkTo {/}">
                     <span class="u-h">The Guardian</span>
                     @fragments.inlineSvg("guardian-logo-160", "logo", Seq("immersive-main-media__logo__svg"))
