--- a/applications/app/views/fragments/interactiveBody.scala.html
+++ b/applications/app/views/fragments/interactiveBody.scala.html
@@ -63,16 +63,18 @@
         @fragments.contentFooter(interactive, page.related, isPaidContent = isPaidContent)
     }
 
-    <script>
-        @HtmlFormat.raw(common.Assets.js.curl)
+    @if(conf.switches.Switches.InlineInteractiveRequire.isSwitchedOn) {
+        <script>
+            @HtmlFormat.raw(common.Assets.js.curl)
 
-        [].slice.apply(document.querySelectorAll('figure.interactive[data-interactive]')).forEach(function (el) {
-            require([el.getAttribute('data-interactive')], function (interactive) {
-                interactive.boot(el, document, window.guardian.config);
-            }, function (err) {
-                console.log('Interactive failed', mainJS);
-                console.log('Error:', err);
+            [].slice.apply(document.querySelectorAll('figure.interactive[data-interactive]')).forEach(function (el) {
+                require([el.getAttribute('data-interactive')], function (interactive) {
+                    interactive.boot(el, document, window.guardian.config);
+                }, function (err) {
+                    console.log('Interactive failed', mainJS);
+                    console.log('Error:', err);
+                });
             });
-        });
-    </script>
+        </script>
+    }
 }
