--- a/common/app/views/fragments/commercial/paidForMeta.scala.html
+++ b/common/app/views/fragments/commercial/paidForMeta.scala.html
@@ -11,7 +11,7 @@
             <input type="checkbox" value="selected" id="paidforAbout" class="paidfor-input">
             <label for="paidforAbout" class="tooltip-label">About @inlineSvg("arrow-down", "icon")</label>
             <div class="popup popup--paidfor">
-                <h3 class="popup--paidfor__title">Paid content is paid for and controlled by an advertiser and produced by the Guardian Labs team</h3>
+                <span class="popup--paidfor__title">Paid content is paid for and controlled by an advertiser and produced by the Guardian Labs team</span>
                 <a class="popup--paidfor__link" href="@LinkTo("/content-funding")">Learn more about Guardian Labs content @inlineSvg("arrow-right", "icon")</a>
             </div>
         </div>
@@ -19,7 +19,7 @@
         <div class="paidfor-label paidfor-meta__more has-popup">
             <button class="u-button-reset paidfor-label__btn popup__toggle" data-toggle="js-paidfor-popup@dataId">About @inlineSvg("arrow-down", "icon")</button>
             <div class="popup popup--paidfor is-off js-paidfor-popup@dataId">
-                <h3 class="popup--paidfor__title">Paid content is paid for and controlled by an advertiser and produced by the Guardian Labs team</h3>
+                <span class="popup--paidfor__title">Paid content is paid for and controlled by an advertiser and produced by the Guardian Labs team</span>
                 <a class="popup--paidfor__link" href="@LinkTo("/content-funding")">Learn more about Guardian Labs content @inlineSvg("arrow-right", "icon")</a>
             </div>
         </div>
