--- a/common/app/views/fragments/amp/stylesheets/glabs.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/glabs.scala.html
@@ -103,7 +103,6 @@
     content: '';
     border: solid transparent;
     border-bottom-color: #333;
-    border-style: solid;
     border-width: 6px;
     height: 0;
     width: 0;
@@ -114,7 +113,9 @@
 }
 
 .popup--paidfor__title {
+    display: block;
     font-size: 0.875rem;
+    font-weight: normal;
     line-height: 1rem;
     margin: 0 0 1em;
 }
