checked pseudoclass changed

--- a/common/app/views/fragments/amp/stylesheets/glabs.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/glabs.scala.html
@@ -29,7 +29,7 @@
     display: none;
 }
 
-.paidfor-input:not(checked) ~ .popup--paidfor {
+.paidfor-input:not(:checked) ~ .popup--paidfor {
     display: none;
 }
 
@@ -37,7 +37,7 @@
     display: block;
 }
 
-.paidfor-input:not(checked) ~ .tooltip-label svg {
+.paidfor-input:not(:checked) ~ .tooltip-label svg {
     transform: rotate(180deg);
 }
 
