--- a/static/src/stylesheets/module/_adslot.scss
+++ b/static/src/stylesheets/module/_adslot.scss
@@ -69,7 +69,7 @@
 }
 
 .sticky-top-banner-ad {
-    transform: translate3d(0,0,0);
+    transform: translate3d(0, 0, 0);
     will-change: transform;
     contain: layout;
     z-index: $zindex-popover;
