Remove commercial components switch

--- a/common/app/views/fragments/commercial/commercialComponent.scala.html
+++ b/common/app/views/fragments/commercial/commercialComponent.scala.html
@@ -1,6 +1,6 @@
-@import conf.switches.Switches._
+@import conf.switches.Switches.CommercialSwitch
 
-@if(CommercialComponentsSwitch.isSwitchedOn) {
+@if(CommercialSwitch.isSwitchedOn) {
     @fragments.commercial.adSlot(
         "merchandising",
         Seq("commercial-component"),
