Updating Save for Later for better meta

--- a/common/app/views/fragments/social.scala.html
+++ b/common/app/views/fragments/social.scala.html
@@ -28,7 +28,7 @@
 }
 
 @SaveForLater = {
-    <li class="social--hidden social__item social__secondary"><span class="social__saveforlater-lozenge js-save-for-later">Save for later</span></li>
+    <li class="social--hidden social__item social__secondary"><a class="social__saveforlater-lozenge js-save-for-later saveforlater--unstyled">Save for later</a></li>
 }
 
 @CloseTray = {
