--- a/static/src/stylesheets/module/content/_gallery.scss
+++ b/static/src/stylesheets/module/content/_gallery.scss
@@ -240,6 +240,15 @@
                 min-width: auto;
             }
         }
+
+        .social--expanded-top {
+            padding: 6px 0 6px 8px;
+            width: 304px; // (33 + 5) * 8
+
+            @include mq(tablet) {
+                width: 228px; // (33 + 5) * 6
+            }
+        }
     }
 
     .meta__numbers {
