--- a/static/src/stylesheets/module/content/_media.global.scss
+++ b/static/src/stylesheets/module/content/_media.global.scss
@@ -1,3 +1,5 @@
+@import '../social-icons';
+
 .content--media {
     .content__head__comment-count {
         display: none;
@@ -39,6 +41,42 @@
 
             .inline-icon {
                 fill: $neutral-3;
+            }
+        }
+
+        .social-icon--expanded-top {
+            fill: #ffffff;
+            border: 0;
+            &.social-icon--facebook {
+                @include social-icon($social-facebook);
+            }
+
+            &.social-icon--gplus {
+                @include social-icon($social-gplus);
+            }
+
+            &.social-icon--whatsapp {
+                @include social-icon($social-whatsapp);
+            }
+
+            &.social-icon--messenger {
+                @include social-icon($social-messenger);
+            }
+
+            &.social-icon--twitter {
+                @include social-icon($social-twitter);
+            }
+
+            &.social-icon--linkedin {
+                @include social-icon($social-linkedin);
+            }
+
+            &.social-icon--pinterest {
+                @include social-icon($social-pinterest);
+            }
+
+            &.social-icon--email {
+                @include social-icon($social-email);
             }
         }
     }
