--- a/applications/app/views/newspaperPage.scala.html
+++ b/applications/app/views/newspaperPage.scala.html
@@ -4,7 +4,7 @@
 
     @for(bookSection <- paper.bookSections) {
 
-        @fragments.containers.facia_cards.container(bookSection, pageId = paper.page.metadata.sectionId)
+        @fragments.containers.facia_cards.container(bookSection)
 
     }
 }
