--- a/common/app/views/fragments/imageFigure.scala.html
+++ b/common/app/views/fragments/imageFigure.scala.html
@@ -107,10 +107,28 @@
 @caption(picture: model.ImageMedia, imageOption: Option[ImageAsset], isMain: Boolean) = {
     @imageOption.map { img =>
         @if(img.showCaption) {
-            <figcaption class="caption@if(isMain){ caption--main} caption--img" itemprop="description">
-                @img.caption.map(Html(_))
-                @if(img.displayCredit && !img.creditEndsWithCaption) { @img.credit.map(Html(_)) }
-            </figcaption>
+            @if(isMain && (mvt.ABNewNavVariantThree.isParticipating || mvt.ABNewNavVariantFour.isParticipating || mvt.ABNewNavVariantFive.isParticipating)) {
+
+                <input type="checkbox" id="show-caption" class="mobile-only u-h">
+
+                <label class="mobile-only reveal-caption reveal-caption--img" for="show-caption">
+                    @fragments.inlineSvg("camera", "icon", List("reveal-caption-icon"))
+                </label>
+
+                <figcaption class="caption caption--main caption--img" itemprop="description">
+                    @img.caption.map(Html(_))
+                    @if(img.displayCredit && !img.creditEndsWithCaption) {
+                        @img.credit.map(Html(_))
+                    }
+                </figcaption>
+            } else {
+                <figcaption class="caption caption--img" itemprop="description">
+                    @img.caption.map(Html(_))
+                    @if(img.displayCredit && !img.creditEndsWithCaption) {
+                        @img.credit.map(Html(_))
+                    }
+                </figcaption>
+            }
         }
     }
 }
