hover action on svg fixed

--- a/commercial/app/views/hosted/guardianHostedVideo.scala.html
+++ b/commercial/app/views/hosted/guardianHostedVideo.scala.html
@@ -32,6 +32,10 @@
         border-top: 1px solid @{page.campaign.fontColour.brandColour};
     }
 
+    .hosted-next-autoplay__tile svg {
+        fill: @{page.campaign.fontColour.brandColour};
+    }
+
     .hosted-page .hosted__link {
         color: @{page.campaign.fontColour.brandColour};
     }
