--- a/static/src/stylesheets/module/commercial/glabs/_hosted.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted.scss
@@ -132,6 +132,9 @@ $hosted-video-height: 540px;
 .hosted-tone-btn:focus,
 .hosted-tone-btn:hover {
     color:  #333333;
+    svg {
+        fill: #333333;
+    }
 }
 
 .hosted-page--bright {
