--- a/static/src/javascripts/projects/common/views/contributions-membership-epic.html
+++ b/static/src/javascripts/projects/common/views/contributions-membership-epic.html
@@ -7,15 +7,15 @@
             believe our perspective matters - because it might well be your perspective, too. </p>
         <p class="contributions__paragraph contributions__paragraph--epic"><%=p2%></p>
     </div>
-    <flex class="contributions__amount-field">
-        <div >
-            <a class="<%=cta1Class%> contributions__option-button contributions__contribute contributions__contribute--epic contributions__contribute--epic-member" href="<%=linkUrl1%>" target="_blank">
+    <flex class="contributions__amount-field contributions__side-by-side-buttons">
+        <div>
+            <a class="<%=cta1Class%> contributions__option-button contributions__contribute contributions__contribute--epic contributions__contribute--epic-member contributions__contribute--epic-member-top" href="<%=linkUrl1%>" target="_blank">
                 <%=cta1%>
             </a>
         </div>
 
-        <div >
-            <a class="<%=cta1Class%> contributions__option-button contributions__contribute contributions__contribute--epic contributions__contribute--epic-member contributions__<%=hidden%>" href="<%=linkUrl2%>" target="_blank">
+        <div class="contributions__<%=hidden%>">
+            <a class="<%=cta2Class%> contributions__option-button contributions__contribute contributions__contribute--epic contributions__contribute--epic-member" href="<%=linkUrl2%>" target="_blank">
                 <%=cta2%>
             </a>
         </div>
