--- a/article/app/views/fragments/articleBody.scala.html
+++ b/article/app/views/fragments/articleBody.scala.html
@@ -64,7 +64,7 @@
 
                         @fragments.witnessCallToAction(article.content)
 
-                        @fragments.contentMeta(article, model)
+                        @fragments.contentMeta(article, model, amp = amp)
 
                         @fragments.chapterHeadings(article)
 
