--- a/article/app/views/liveblog/liveBlogBody.scala.html
+++ b/article/app/views/liveblog/liveBlogBody.scala.html
@@ -73,7 +73,7 @@
 
                     <div class="blog__left-col">
 
-                        @fragments.contentMeta(article, model)
+                        @fragments.contentMeta(article, model, amp = amp)
 
                         <div class="js-top-marker"></div>
                         <div class="js-live-blog__sticky-components">
