--- a/common/app/views/fragments/submeta.scala.html
+++ b/common/app/views/fragments/submeta.scala.html
@@ -42,5 +42,5 @@
 }
 
 @Social(shares: ShareLinkMeta) = {
-    @fragments.social(ShareLinkMeta(shares.visible ++ shares.hidden.fold(Nil: List[model.ShareLink])(_.toList), None))
+    @fragments.social(ShareLinkMeta.noneHidden(shares))
 }
