Make 'more' button only appear when can be used

--- a/common/app/views/fragments/social.scala.html
+++ b/common/app/views/fragments/social.scala.html
@@ -24,7 +24,7 @@
 }
 
 @SocialMore = {
-    <li class="social__secondary social__item"><span class="social-icon social-icon--more ">&bull;&bull;&bull;</span></li>
+    <li class="social__secondary social__item social--hidden social__item--more"><span class="social-icon social-icon--more">&bull;&bull;&bull;</span></li>
 }
 
 @SaveForLater = {
