--- a/static/src/stylesheets/module/content/_media.global.scss
+++ b/static/src/stylesheets/module/content/_media.global.scss
@@ -30,6 +30,7 @@
             overflow: visible; // opacity cuts borders off on chrome otherwise
             background-color: transparent;
             fill: $neutral-3;
+            color: $neutral-3;
             border: 1px solid $neutral-2;
             box-sizing: border-box;
             transition: border-color .15s ease-out;
