--- a/common/app/views/fragments/analytics/base.scala.html
+++ b/common/app/views/fragments/analytics/base.scala.html
@@ -10,13 +10,11 @@
 
 @fragments.analytics.google(page)
 
-@fragments.analytics.omniture(page)
-
 @fragments.analytics.comscore(page)
 
 <script>
     @*
-        Basic Omniture runs on both Core & 'Full experience'
+        GA runs on both Core & 'Full experience'
         We just need to run Ophan here.
     *@
 
